@@ -1,5 +1,8 @@
 2020-07-21  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ball/upnp/ssdp/SSDPMessage.java:
+	Added toDatagramPacket(InetSocketAddress) method.
+
 	* pom.xml: Started development 2.1-SNAPSHOT.
 
 2020-07-15  Allen D. Ball  <ball@hcf.dev>
